--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
 </head>
 <body>
 
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Chi siamo</a></li>
+        <li><a href="#">Contatti</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <!-- di ID ne può essere presente solo uno per pagina con quel nome -->
-  <h1 id="titolo-principale" >Primo css</h1>
+  <h1 id="titolo-principale"  >Primo css</h1>
+
+  <h2 class="testo-secondario" id="testo-bis" style="color:aquamarine">Testo secondario</h2>
 
   <!-- la stessa classe può essere utili<zata n volte per pagina -->
   <p class="testo-pricipale">
@@ -72,6 +84,91 @@
   <div class="box box-con-img">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio unde incidunt voluptatibus alias quibusdam. Libero illo similique laboriosam, incidunt culpa obcaecati ipsum! Exercitationem, dolorum accusantium. Dignissimos aliquid consequuntur quidem rerum.</p>
   </div>
+
+  <div class="box-2">
+    
+    <p> <a href="#">LINK</a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio unde incidunt voluptatibus alias quibusdam. Libero illo similique laboriosam, incidunt culpa obcaecati ipsum! Exercitationem, dolorum accusantium. Dignissimos aliquid consequuntur quidem rerum.</p>
+  </div>
+
+  <div class="box-3">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio unde incidunt voluptatibus alias quibusdam. Libero illo similique laboriosam, incidunt culpa obcaecati ipsum! Exercitationem, dolorum accusantium. Dignissimos aliquid consequuntur quidem rerum.</p>
+  </div>
+
+  <div>
+    <div class="box-inline-block"></div>
+    <div class="box-inline-block"></div>
+  </div>
+
+  <div>
+    <div class="box-con-margin-1"></div>
+    <div class="box-con-margin-2"></div>
+  </div>
+
+  <ul class="lista-1">
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+  </ul>
+
+  <ul class="lista-2">
+    <li>link 1</li>
+    <li>link 2</li>
+    <li>link 3</li>
+    <li>link 4</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+  </ul>
+
+  <ul class="lista-3">
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+  </ul>
+
+  <ul class="lista-4">
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+  </ul>
+  
+
+  <ul class="lista-5">
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+    <li>link</li>
+  </ul>
   
 </body>
 </html>
